--- a/main.html
+++ b/main.html
@@ -9,5 +9,6 @@
 <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <script src="script.js"></script>
+    <iframe src=¨https://neal.fun¨></iframe>
 </body>
 </html>
